# ChangeLog for dev-util/esvn
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/esvn/ChangeLog,v 1.9 2005/10/04 20:33:33 mrness Exp $

  04 Oct 2005; Alin Nastac <mrness@gentoo.org> -esvn-0.6.9.ebuild,
  esvn-0.6.11.ebuild:
  Remove obsolete test version. Remove COPYING and LICENSE from docs.

*esvn-0.6.11 (18 Jul 2005)

  18 Jul 2005; Alin Nastac <mrness@gentoo.org> -esvn-0.6.8-r1.ebuild,
  +esvn-0.6.11.ebuild:
  Version bump.

  28 Jun 2005; Markus Rothe <corsair@gentoo.org> esvn-0.6.9.ebuild:
  added ~ppc64

  17 Mar 2005; David Holm <dholm@gentoo.org> esvn-0.6.9.ebuild:
  Added to ~ppc.

  13 Mar 2005; Alin Nastac <mrness@gentoo.org> esvn-0.6.8-r1.ebuild:
  Rollback to ~x86.

*esvn-0.6.9 (11 Mar 2005)

  11 Mar 2005; Alin Nastac <mrness@gentoo.org> esvn-0.6.8-r1.ebuild,
  -esvn-0.6.8.ebuild, +esvn-0.6.9.ebuild:
  Stable on x86. Remove old testing version. Version bump.

  13 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> esvn-0.6.8-r1.ebuild:
  added ~amd64 to keywords. fixes #81846

*esvn-0.6.8-r1 (31 Jan 2005)

  31 Jan 2005; Alin Nastac <mrness@gentoo.org> +esvn-0.6.8-r1.ebuild:
  Fix documentation path (bug #80214).

*esvn-0.6.8 (25 Jan 2005)

  25 Jan 2005; Alin Nastac <mrness@gentoo.org> +metadata.xml,
  +esvn-0.6.8.ebuild:
  Initial import from bug #59841.
