@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/esvn/esvn-0.6.11.ebuild,v 1.2 2005/10/04 20:33:33 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/esvn/esvn-0.6.11.ebuild,v 1.3 2005/11/17 22:16:43 mrness Exp $
 
 inherit kde-functions
 
@@ -13,6 +13,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
+
 RDEPEND="
 	dev-util/subversion"
 
@@ -22,8 +23,9 @@ S="${WORKDIR}/${PN}"
 
 src_unpack() {
 	unpack ${A} || die "failed to unpack sources"
-	sed -i "s:/usr/share/doc/esvn/html-docs:/usr/share/doc/${PF}/html:" "${S}/src/mainwindow.cpp" || \
-		die "failed to replace doc path"
+	sed -i "s:qmake:${QTDIR}/bin/qmake:" ${S}/Makefile && \
+		sed -i "s:/usr/share/doc/esvn/html-docs:/usr/share/doc/${PF}/html:" "${S}/src/mainwindow.cpp" || \
+			die "at least one sed has failed"
 }
 
 src_compile() {
